<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2015 Layer. All rights reserved.
    
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
        
          http://www.apache.org/licenses/LICENSE-2.0
          
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.    
-->
<resources>


    <string name="app_name">YouWho</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit Profile</string>


    <string name="facebook_app_id">1093782117322527</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="loadingscreen">loadingScreen</string>

    <!-- =========== ANDROID DRAWER STRINGS ============== -->

    <string name="open">open</string>
    <string name="close">close</string>

    <string-array name="menu_items">
        <item>See you</item>
        <item>See who</item>
        <item>Speak to</item>
        <item>People Preferences</item>
        <item>Settings</item>
        <item>FAQ</item>
        <item>Share</item>
        <item>Logout</item>
    </string-array>

    <string-array name="menu_descriptions">
        <item>View your profile</item>
        <item>Discover who\'s around you</item>
        <item>Talk to people you matched with</item>
        <item>Change who you see or how they see you</item>
        <item>Notifications, account, and more</item>
        <item>Help, contact info, and more</item>
        <item>Share will all who\'s there!</item>
        <item>See you around!</item>
    </string-array>

    <string name="selected_item_color">#9FE15258</string>
    <string name="selected_text_color">#FFFFFFFF</string>

    <!-- ================================================= -->

    <!-- Main activity strings -->
    <string name="dislike">dislike button</string>
    <string name="like">like button</string>

    <!-- Matched Message activity strings -->
    <string name="Matched_Screen_text">"You Match"</string>



    <!-- =============== MISCELLANEOUS =================== -->
    <string name="filler">filler</string>
    <string name="test_long_string">Interestsskdlafjldskfjlksd;afjlkadsjflsdfjkldslfkjlsdkjflsdjflkjsdlkfjlkdsjflsdjlfdflkjasdlfjdslajfsadjkflksdjflkdsjflkjadslkfjlkadsjflkdasjflkjdaslfkjsadlkfjladskjfl;kadsjflksadjflkjsdlkfjladskjflksdjflksdjfldskjflksdjflkdsjflksdjflsdjfldj;flkjadsfldsjkfl;dsjfldk;jfldkjsflkjadsflk</string>

    <string name="title_activity_card_profile">CardProfileActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_matched_message">MatchedMessageActivity</string>

    <!-- ================================================= -->

    <string name="atlas_screen_settings_title">Settings</string>
    <string name="atlas_screen_messages_title">New Message</string>
    <string name="atlas_screen_qr_prompt">Scan Layer Atlas QR Code</string>
    <string name="email_hint">Enter E-mail</string>
    <string name="password_hint">Enter Password</string>
    <string name="title_activity_preferences">Preferences</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_discovery">Discovery</string>
    <string name="pref_description_discovery">Allows the user to show up in others feed</string>
    <string name="discovery_text">disabling discovery prevents others from seeing you. This has no effect on your existing matches.</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_prefereces">PreferecesActivity</string>

    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="profile_pic">Profile Pic</string>

    <!-- =========== ANDROID Double Seekbar STRINGS ============== -->
    <string name="title">RangeBar</string>
    <string name="tickCount">tickCount = 37</string>
    <string name="tickHeight">tickHeight = 24</string>
    <string name="barWeight">barWeight = 2</string>
    <string name="barColor">barColor = #CCCCCC</string>
    <string name="connectingLineWeight">connectingLineWeight = 4</string>
    <string name="connectingLineColor">connectingLineColor = #33B5E5</string>
    <string name="thumbRadius">thumbRadius = N/A</string>
    <string name="thumbColorNormal">thumbColorNormal = N/A</string>
    <string name="thumbColorPressed">thumbColorPressed = N/A</string>
    <string name="confirmNewColor">New</string>
    <string name="confirmDefaultColor">Default</string>
    <string name="colorPickerTitle">Select a Color</string>
    <string name="resetThumbColors">Reset Thumb Colors</string>
    <string name="leftIndexValue">18</string>
    <string name="leftIndex">leftIndex</string>
    <string name="rightIndexValue">55+</string>
    <string name="rightIndex">rightIndex</string>
    <string name="refresh">Refresh Indices</string>
    <string name="mutual_friends_tag">mutual friends:</string>
    <string name="mutual_friends_card_tag">Mutual Friends</string>
    <string name="example_mutual_friend_name">EXAMPLE NAME</string>
    <string name="title_activity_igweb">IGWebActivity</string>
    <string name="title_activity_matched_notifcation">MatchedNotifcationActivity</string>

</resources>
