<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout_preferences">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mylayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context="com.cs180.ucrtinder.ucrtinder.ui.PreferencesActivity"
        android:background="#dddcdc">

        <Switch
            android:layout_width="fill_parent"
            android:layout_height="8dp"
            android:text="Discovery"
            android:id="@+id/discoveryswitch"
            android:textColor="@android:color/black"
            android:background="@android:color/white"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:buttonTint="#f60707"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_overlay"
            android:textSize="15sp"
            android:text="disabling discovery prevents others from seeing you. This has no effect on your existing matches."
            android:id="@+id/discoveryTextView"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="Show Me:"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="Sex"
                android:layout_weight="50"/>
        </LinearLayout>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Men"
            android:id="@+id/menswitch"
            android:textColor="@android:color/black"
            android:background="@android:color/white"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Woman"
            android:id="@+id/womanswitch"
            android:textColor="@android:color/black"
            android:background="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="Search Distance:"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="dist"
                android:layout_weight="50"/>
        </LinearLayout>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/distanceseekBar"
            android:background="#25864f"
            android:clickable="false"
            android:max="100"
            android:progressBackgroundTint="#ff7300"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/distancetextView"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="Show Ages:"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="age"
                android:layout_weight="50"/>
        </LinearLayout>

        <com.edmodo.rangebar.RangeBar
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rangebarview"
            custom:tickCount="37"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/leftIndex"
                    style="@style/RoboTheme"
                    android:layout_marginTop="0dp"
                    android:text="@string/leftIndex" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/leftIndexValue"
                    style="@style/RoboTheme"
                    android:layout_marginTop="0dp"
                    android:inputType="number"
                    android:text="@string/leftIndexValue"
                    android:textSize="35sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rightIndex"
                    style="@style/RoboTheme"
                    android:layout_marginTop="0dp"
                    android:text="@string/rightIndex" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rightIndexValue"
                    style="@style/RoboTheme"
                    android:layout_marginTop="0dp"
                    android:inputType="number"
                    android:text="@string/rightIndexValue"
                    android:textSize="35sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffffff"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:clipToPadding="false">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitCenter"
            android:id="@+id/preferences_profile_drawer_pic"
            android:layout_gravity="center"
            android:contentDescription="@string/profile_pic"
            />

        <ListView android:id="@+id/left_drawer_preferences"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_gravity="start"
                  android:choiceMode="singleChoice"
                  android:divider="@android:color/darker_gray"
                  android:dividerHeight="0dp"
                  android:background="#ffffffff" >
        </ListView>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
